[tool.poetry]
name = "rgsync"
version = "0.3.0"
description = "RedisGears synchronization recipe"
keywords = ["redis", "redisgears", "writebehind"]
authors = ["RedisLabs OSS <oss@redislabs.com>"]
license = "BSD-3-Clause"

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production',
]

[tool.poetry.dependencies]
python = "^3.6.2"
redis = "^3.5.3"
SQLAlchemy = "1.3.24"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
bandit = "^1.7.0"
vulture = "^2.3"
tox = "^3.24.0"
tox-poetry = "^0.4.0"
pytest = "^6.2.0"
flake8-docstrings = "^1.6.0"
mock = "^4.0.3"
black = "^21.7b0"
tox-docker = "^3.0.0"
tox-pyenv = "^1.1.0"
PyMySQL = "^1.0.2"
rltest = {git = "https://github.com/RedisLabsModules/RLTest.git", rev = "master"}
pymongo = "^3.12.0"
cryptography = "^3.4.7"

[tool.pytest.ini_options]
markers = [
    "mysql: mysql backend tests",
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
